--- a/playbook.yml
+++ b/playbook.yml
@@ -241,7 +241,7 @@
 
     ### UTILS
     - name: Create sshpass v1.06 formula
-      shell: brew create https://sourceforge.net/projects/sshpass/files/sshpass/1.06/sshpass-1.06.tar.gz
+      shell: brew create --force https://sourceforge.net/projects/sshpass/files/sshpass/1.06/sshpass-1.06.tar.gz
 
     - name: Install libraries/utils with homebrew
       homebrew: name={{ item }} state=present
