--- a/playbook.yml
+++ b/playbook.yml
@@ -122,7 +122,7 @@
       #- autojump # quickly navigate from cmd line
       #- bash # Bash 4
       #- boot2docker # for running docker on osx
-      - bfg
+  #    - bfg # requires java
       #- brew-cask
       - cowsay # amazing
       #- coreutils # Install GNU core utilities (those that come with OS X are outdated)
