Add ignore_errors for sshpass

--- a/playbook.yml
+++ b/playbook.yml
@@ -246,6 +246,7 @@
     ### UTILS
     - name: Create sshpass v1.06 formula
       shell: brew create --force https://sourceforge.net/projects/sshpass/files/sshpass/1.06/sshpass-1.06.tar.gz
+      ignore_errors: yes
 
     - name: Install libraries/utils with homebrew
       homebrew: name={{ item }} state=present
