Update brew casks

--- a/playbook.yml
+++ b/playbook.yml
@@ -31,6 +31,7 @@
       #- eve # learn your shortcuts
       #- evernote
       #- fing # network diagnostics
+
       - filezilla
       - firefox
       - focusatwill
@@ -44,6 +45,7 @@
       #- imageoptim # optimize images
       #- insomniax
       #- istumbler # network discovery GUI
+      - ip-in-menu-bar
       - iterm2
       #- java8
       #- jumpcut # awesome clipboard
@@ -124,7 +126,7 @@
     #dotfile_repo_username: glennr # the GH repo where your dotfiles are
 
     brew_utils:
-      - ansible #already installed by ./mac bootstrap script
+      #- ansible #already installed by ./mac bootstrap script
       #- autoconf
       #- autojump # quickly navigate from cmd line
       #- bash # Bash 4
@@ -163,7 +165,7 @@
       #- rsync
       #- ruby-build
       #- sqlite # production rails DB
-      - sshpass
+      #- sshpass
       #- the_silver_searcher # fast ack-grep
       #- tmux
       #- vim
@@ -232,7 +234,7 @@
       shell: ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
       when: brew_installed.stat.exists == false
 
-    - name: Instal required Homebrew Taps
+    - name: Install required Homebrew Taps
       shell: brew tap {{ item }}
       with_items: "{{ brew_taps }}"
 
